--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     }
     
     .container {
-        background-color: #fff;
+        background-color: #ACF0D1;
         padding: 20px;
         border-radius: 8px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -51,15 +51,16 @@
         width: 100%;
         padding: 10px;
         border-radius: 5px;
-        border: 1px solid #ccc;
+        border: 1px solid #ffffff;
         box-sizing: border-box;
+        background-color: #f2fcf7;
     }
     
     .download-btn {
         padding: 10px 20px;
         border: none;
-        border-radius: 5px;
-        background-color: #007bff;
+        border-radius: 45px;
+        background-color: #00203F;
         color: #fff;
         cursor: pointer;
     }
@@ -72,7 +73,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Generate Your CV</h1>
+        <h1 class="download-btn">Generate Your CV</h1>
         <div class="input-field">
             <input type="text" id="position" placeholder="Position Title">
         </div>
