--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             <input type="text" id="vacancy" placeholder="Vacancy No.">
         </div>
         <button class="download-btn" onclick="createPDFs()">Download CV</button>
+        <a href="home.html">Home</a>
     </div>
     <script>
         function createPDFs() {
