--- a/akbari.html
+++ b/akbari.html
@@ -155,10 +155,10 @@
 <body>
     <nav>
         <div class="menu">
-            <a href="home.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="projects.html">Projects</a>
-            <a href="contact.html">Contact</a>
+            <a href="index.html">Home</a>
+            <a href="index.html">About</a>
+            <a href="index.html">Projects</a>
+            <a href="index.html">Contact</a>
             <a href="login.html">Login</a>
         </div>
     </nav>
